--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (0.5-1qpid+wily1) wily; urgency=medium
+
+  * Rebased to Dispatch 0.5.
+
+ -- Irina Boverman <iboverma@redhat.com>  Thu, 14 Jan 2016 17:16:49 -0400
+
 qpid-dispatch (0.4-2qpid+trusty1) trusty; urgency=medium
 
   * Bumped the release for the new Qpid testing PPA.
