--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qpid-dispatch (0.5-4qpid+trusty1) trusty; urgency=medium
+qpid-dispatch (0.5-5qpid+wily1) wily; urgency=medium
 
   * Rebased to Dispatch 0.5.
 
