--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qpid-dispatch (0.7.0-1qpid+xenial1) xenial; urgency=medium
+
+  * Rebased to Dispatch 0.7.0
+ -- Irina Boverman <iboverma@redhat.com>  Thu, 18 May 2017 14:58:45 -0400
+
 qpid-dispatch (0.6.1-3qpid+xenial1) xenial; urgency=medium
 
   * Added qdrouter.json
