--- a/debian/changelog
+++ b/debian/changelog
@@ -1,28 +1,8 @@
-qpid-dispatch (0.8.0-1qpid+xenial1) xenial; urgency=medium
+qpid-dispatch (0.8.0-1qpid+trusty1) trusty; urgency=medium
 
   * Rebased to Dispatch 0.8.0
 
  -- Irina Boverman <iboverma@redhat.com>  Tue, 13 Jun 2017 10:33:54 -0400
-
-qpid-dispatch (0.7.0-7qpid+xenial1) xenial; urgency=medium
-
-  * Rebased to Dispatch 0.7.0
-  * Can't build manpages in PPA/testing, removing them from build for now
-
- -- Irina Boverman <iboverma@redhat.com>  Fri, 19 May 2017 14:58:45 -0400
-
-qpid-dispatch (0.6.1-3qpid+xenial1) xenial; urgency=medium
-
-  * Added qdrouter.json
-  * Rebuilt against qpid-proton 0.14.0
-
- -- Irina Boverman <iboverma@redhat.com>  Tue, 11 Oct 2016 10:44:18 -0400
-
-qpid-dispatch (0.6.1-2qpid+xenial1) xenial; urgency=medium
-
-  * Built for xenial
-
- -- Irina Boverman <iboverma@redhat.com>  Tue, 23 Aug 2016 16:06:12 -0400
 
 qpid-dispatch (0.6.1-1qpid+trusty1) trusty; urgency=medium
 
