--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qpid-dispatch (1.0.0-1qpid+xenial1) xenial; urgency=medium
+
+  * Rebased to Dispatch 0.8.0
+
+ -- Irina Boverman <iboverma@redhat.com>  Wed, 21 Feb 2017 14:51:18 -0400
 qpid-dispatch (0.8.0-1qpid+xenial1) xenial; urgency=medium
 
   * Rebased to Dispatch 0.8.0
