--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.2.0-1qpid+xenial1) xenial; urgency=medium
+
+  * Rebased to Dispatch 1.2.1
+
+ -- Irina Boverman <iboverma@redhat.com>  Wed,  8 Aug 2018 10:38:45 -0400
+
 qpid-dispatch (1.0.1-1qpid+xenial1) xenial; urgency=medium
 
   * Rebased to Dispatch 1.0.1
