--- a/debian/changelog
+++ b/debian/changelog
@@ -1,121 +1,6 @@
-qpid-dispatch (1.2.0-1qpid+xenial1) xenial; urgency=medium
+qpid-dispatch (1.2.0-1qpid+bionic1) bionic; urgency=medium
 
   * Rebased to Dispatch 1.2.1
 
- -- Irina Boverman <iboverma@redhat.com>  Wed,  8 Aug 2018 10:38:45 -0400
+ -- Irina Boverman <iboverma@redhat.com>  Wed, 13 Aug 2018 13:13:39 -0400
 
-qpid-dispatch (1.0.1-1qpid+xenial1) xenial; urgency=medium
-
-  * Rebased to Dispatch 1.0.1
-
- -- Irina Boverman <iboverma@redhat.com>  Mon, 19 Mar 2018 15:05:55 -0400
-
-qpid-dispatch (1.0.0-2qpid+xenial1) xenial; urgency=medium
-
-  * Rebased to Dispatch 1.0.0
-
- -- Irina Boverman <iboverma@redhat.com>  Thu, 22 Feb 2018 12:12:48 -0400
-
-qpid-dispatch (0.8.0-1qpid+xenial1) xenial; urgency=medium
-
-  * Rebased to Dispatch 0.8.0
-
- -- Irina Boverman <iboverma@redhat.com>  Tue, 13 Jun 2017 10:33:54 -0400
-
-qpid-dispatch (0.7.0-7qpid+xenial1) xenial; urgency=medium
-
-  * Rebased to Dispatch 0.7.0
-  * Can't build manpages in PPA/testing, removing them from build for now
-
- -- Irina Boverman <iboverma@redhat.com>  Fri, 19 May 2017 14:58:45 -0400
-
-qpid-dispatch (0.6.1-3qpid+xenial1) xenial; urgency=medium
-
-  * Added qdrouter.json
-  * Rebuilt against qpid-proton 0.14.0
-
- -- Irina Boverman <iboverma@redhat.com>  Tue, 11 Oct 2016 10:44:18 -0400
-
-qpid-dispatch (0.6.1-2qpid+xenial1) xenial; urgency=medium
-
-  * Built for xenial
-
- -- Irina Boverman <iboverma@redhat.com>  Tue, 23 Aug 2016 16:06:12 -0400
-
-qpid-dispatch (0.6.1-1qpid+trusty1) trusty; urgency=medium
-
-  * Rebuilt against proton 0.13.1.
-
- -- Irina Boverman <iboverma@redhat.com>  Thu, 18 Aug 2016 10:04:45 -0400
-
-qpid-dispatch (0.5-5qpid+trusty1) trusty; urgency=medium
-
-  * Rebuilt against proton 0.12.0.
-
- -- Irina Boverman <iboverma@redhat.com>  Tue,  8 Mar 2016 13:16:49 -0400
-
-qpid-dispatch (0.5-4qpid+trusty1) trusty; urgency=medium
-
-  * Rebased to Dispatch 0.5.
-
- -- Irina Boverman <iboverma@redhat.com>  Thu, 20 Jan 2016 10:16:49 -0400
-
-qpid-dispatch (0.4-2qpid+trusty1) trusty; urgency=medium
-
-  * Bumped the release for the new Qpid testing PPA.
-
- -- Darryl Pierce <dpierce@redhat.com>  Thu, 11 Jun 2015 17:04:49 -0400
-
-qpid-dispatch (0.4-1trusty+mcpierce1) trusty; urgency=medium
-
-  * Rebased on Dispatch 0.4.
-
- -- Darryl L. Pierce <dpierce@redhat.com>  Tue, 21 Apr 2015 10:19:51 -0400
-
-qpid-dispatch (0.4-1precise+mcpierce1) precise; urgency=low
-
-  * Rebased on Dispatch 0.4.
-
- -- Darryl L. Pierce <dpierce@redhat.com>  Tue, 21 Apr 2015 09:10:01 -0400
-
-qpid-dispatch (0.2-5trusty+mcpierce1) trusty; urgency=medium
-
-  * Removed the Conflicts line for libqpid-dispatch0-dev. 
-  * Added a transitional version of libqpid-dispatch-dev.
-  * Added version details to Provides/Replaces for libqpid-dispatch0-dev. 
-  * Updated libqpid-dispatch0-dev to replace libqpid-dispatch-dev.
-
- -- Darryl L. Pierce <mcpierce@gmail.com>  Wed, 10 Sep 2014 10:33:54 -0400
-
-qpid-dispatch (0.2-4) unstable; urgency=low
-
-  * Updated dependencies to be on libqpid-proton2-dev.
-  * Renamed libqpid-dispatch-dev to libqpid-dispatch0-dev.
-  * Removed qdtest package.
-
- -- Darryl L. Pierce <mcpierce@gmail.com>  Mon, 08 Sep 2014 09:40:10 -0400
-
-qpid-dispatch (0.2-3) unstable; urgency=medium
-
-  * Renamed qpid-dispatch-router package to qdrouterd.
-  * Renamed libqpid-dispatch0-dev package to libqpid-dispatch-dev.
-  * Changed dependency from libqpid-proton2-dev to libqpid-proton-dev.
-  * Added support for System V init scripts.
-  * DISPATCH-51: address semantics don't propagate from one router to another
-  * DISPATCH-63: Daemon operation is needed for SysV-style service execution
-
- -- Darryl L. Pierce <mcpierce@gmail.com>  Mon, 28 Jul 2014 11:56:27 -0400
-
-qpid-dispatch (0.2-2) unstable; urgency=medium
-
-  * Overrode lintian errors:
-    * libqpid-dispatch0: script-not-executable
-    * qdtest: binary-without-manpage
-
- -- Darryl L. Pierce <mcpierce@gmail.com>  Wed, 16 Jul 2014 09:56:33 -0400
-
-qpid-dispatch (0.2-1) unstable; urgency=medium
-
-  * Initial release (Closes: #737776)
-
- -- Darryl L. Pierce <mcpierce@gmail.com>  Wed, 09 Jul 2014 14:18:17 -0400
