--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.5.0-1qpid+bionic1) bionic; urgency=medium
+  
+  * Rebased to Dispatch 1.5.0
+
+ -- Irina Boverman <iboverma@redhat.com>  Fri, 1 Feb 2019 15:28:25 -0400
+
 qpid-dispatch (1.2.0-1qpid+bionic1) bionic; urgency=medium
 
   * Rebased to Dispatch 1.2.1
