--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.7.0-1qpid+bionic1) bionic; urgency=medium
+  
+  * Rebased to Dispatch 1.7.0
+
+ -- Irina Boverman <iboverma@redhat.com>  Thu, 16 May 2019 16:25:25 -0400
+
 qpid-dispatch (1.5.0-1qpid+bionic1) bionic; urgency=medium
   
   * Rebased to Dispatch 1.5.0
