--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.8.0-1qpid+xenial1) xenial; urgency=medium
+
+  * Rebased to Dispatch 1.8.0
+
+ -- Irina Boverman <iboverma@redhat.com>  Fri, 21 Jun 2019 13:47:56 -0400
+
 qpid-dispatch (1.7.0-1qpid+xenial1) xenial; urgency=medium
 
   * Rebased to Dispatch 1.7.0
