--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.8.0-1qpid+bionic1) bionic; urgency=medium
+  
+  * Rebased to Dispatch 1.8.0
+
+ -- Irina Boverman <iboverma@redhat.com>  Fri, 21 Jun 2019 14:25:25 -0400
+
 qpid-dispatch (1.7.0-1qpid+bionic1) bionic; urgency=medium
   
   * Rebased to Dispatch 1.7.0
