--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.9.0-1qpid+bionic1) bionic; urgency=medium
+  
+  * Rebased to Dispatch 1.9.0
+
+ -- Irina Boverman <iboverma@redhat.com>  Tue, 15 Oct 2019 11:26:25 -0400
+
 qpid-dispatch (1.8.0-1qpid+bionic1) bionic; urgency=medium
   
   * Rebased to Dispatch 1.8.0
