--- a/debian/changelog
+++ b/debian/changelog
@@ -1,42 +1,6 @@
-qpid-dispatch (1.11.0-1qpid+bionic1) bionic; urgency=medium
+qpid-dispatch (1.12.0-1qpid+focal1) focal; urgency=medium
   
-  * Rebased to Dispatch 1.11.0
+  * Rebased to Dispatch 1.12.0
 
- -- Irina Boverman <iboverma@redhat.com>  Tue, 14 Apr 2020 14:39:56 -0400
-
-qpid-dispatch (1.10.0-1qpid+bionic1) bionic; urgency=medium
-
-  * Rebased to Dispatch 1.10.0
-
- -- Irina Boverman <iboverma@redhat.com>  Fri,  6 Mar 2020 14:23:56 -0400
-
-qpid-dispatch (1.9.0-1qpid+bionic1) bionic; urgency=medium
-  
-  * Rebased to Dispatch 1.9.0
-
- -- Irina Boverman <iboverma@redhat.com>  Tue, 15 Oct 2019 11:26:25 -0400
-
-qpid-dispatch (1.8.0-1qpid+bionic1) bionic; urgency=medium
-  
-  * Rebased to Dispatch 1.8.0
-
- -- Irina Boverman <iboverma@redhat.com>  Fri, 21 Jun 2019 14:25:25 -0400
-
-qpid-dispatch (1.7.0-1qpid+bionic1) bionic; urgency=medium
-  
-  * Rebased to Dispatch 1.7.0
-
- -- Irina Boverman <iboverma@redhat.com>  Thu, 16 May 2019 16:25:25 -0400
-
-qpid-dispatch (1.5.0-1qpid+bionic1) bionic; urgency=medium
-  
-  * Rebased to Dispatch 1.5.0
-
- -- Irina Boverman <iboverma@redhat.com>  Fri, 1 Feb 2019 15:28:25 -0400
-
-qpid-dispatch (1.2.0-1qpid+bionic1) bionic; urgency=medium
-
-  * Rebased to Dispatch 1.2.1
-
- -- Irina Boverman <iboverma@redhat.com>  Mon, 13 Aug 2018 13:13:39 -0400
+ -- Irina Boverman <iboverma@redhat.com>  Mon, 11 May 2020 15:54:56 -0400
 
