--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.14.0-1qpid+bionic1) bionic; urgency=medium
+  
+  * Rebased to 1.14.0
+
+ -- Irina Boverman <iboverma@redhat.com>  Tue,  6 Oct 2020 15:30:00 -0400
+
 qpid-dispatch (1.12.0-2qpid+bionic1) bionic; urgency=medium
   
   * Changed to depend on proton 0.31.0
