--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.14.0-1qpid+focal1) focal; urgency=medium
+  
+  * Rebased to Dispatch 1.14.0
+
+ -- Irina Boverman <iboverma@redhat.com>  Tue,  6 Oct 2020 18:04:00 -040
+
 qpid-dispatch (1.12.0-1qpid+focal1) focal; urgency=medium
   
   * Rebased to Dispatch 1.12.0
