--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.15.0-1qpid+bionic1) bionic; urgency=medium
+
+  * Rebased to 1.15.0
+
+ -- Kim van der Riet <kvanderr@redhat.com>  Tue,  6 Apr 2021 11:30:00 -0400
+
 qpid-dispatch (1.14.0-1qpid+bionic1) bionic; urgency=medium
   
   * Rebased to 1.14.0
