--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.15.0-1qpid+focal1) focal; urgency=medium
+
+  * Rebased to Dispatch 1.15.0 
+
+ -- Kim van der Riet <kvanderr@redhat.com>  Thu, 08 Apr 2021 11:40:37 -0400
+
 qpid-dispatch (1.14.0-1qpid+focal1) focal; urgency=medium
   
   * Rebased to Dispatch 1.14.0
