--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qpid-dispatch (1.17.0-1qpid+focal1) focal; urgency=medium
+
+  * Rebased to 1.17.0
+
+ -- Kim van der Riet <kpvdr@redhat.com>  Fri, 03 Sep 2021 18:13:09 -0400
+
 qpid-dispatch (1.16.0-1qpid+focal1) focal; urgency=medium
 
   * Rebased to Dispatch 1.16.0
